--- a/manual/config_ter.html
+++ b/manual/config_ter.html
@@ -93,12 +93,7 @@
             <LI><LABEL class="collapse" for="_9">Saving and Loading</LABEL>
                 <INPUT id="_9" type="checkbox">
                     <UL>
-                        <LI class="nav"><A href="save_h.html">Height map</A></LI>
-                        <LI class="nav"><A href="save_d.html">Detail maps</A></LI>
-                        <LI class="nav"><A href="save_g.html">Grass map</A></LI>
-                        <LI class="nav"><A href="save_nav.html">Navigation map</A></LI>
-                        <LI class="nav"><A href="save_obj.html">Objects</A></LI>
-                        <LI class="nav"><A href="save_coll.html">Collision mesh</A></LI>                    
+                        <LI class="nav"><A href="save_h.html">Save/Load dialog</A></LI>                    
                     </UL>
             </LI>
         </OL>
@@ -108,7 +103,10 @@
          <A href="config_grid.html" class="right">NEXT -&gt;&gt;</A>        
         <H1>Terrain Configuration</H1>
     </DIV> 
-    <DIV id="main">    
+    <DIV id="main">  
+    <DIV class="img">
+            <IMG src="img/sky_sea_icon.png"> 
+        </DIV>    
      <P>
      The editor allows to configure terrain texture tiling and the scale of the terrain itself, these are part of the map configuration because all the terrain settings are saved with the map file. 
     </P>
