--- a/manual/config_brush.html
+++ b/manual/config_brush.html
@@ -93,12 +93,7 @@
             <LI><LABEL class="collapse" for="_9">Saving and Loading</LABEL>
                 <INPUT id="_9" type="checkbox">
                     <UL>
-                        <LI class="nav"><A href="save_h.html">Height map</A></LI>
-                        <LI class="nav"><A href="save_d.html">Detail maps</A></LI>
-                        <LI class="nav"><A href="save_g.html">Grass map</A></LI>
-                        <LI class="nav"><A href="save_nav.html">Navigation map</A></LI>
-                        <LI class="nav"><A href="save_obj.html">Objects</A></LI>
-                        <LI class="nav"><A href="save_coll.html">Collision mesh</A></LI>                    
+                        <LI class="nav"><A href="save_h.html">Save/Load dialog</A></LI>                    
                     </UL>
             </LI>
         </OL>
@@ -108,8 +103,22 @@
          <A href="config_file.html" class="right">NEXT -&gt;&gt;</A>        
         <H1>Brush configuration</H1>
     </DIV> 
-    <DIV id="main">    
-     <P>
-     </P>
+    <DIV id="main">   
+        <DIV class="img">
+            <IMG src="img/config.png"> 
+        </DIV>      
+    <P>
+    It is encouraged to use the keyboard keys (WSAD and QE) to control the size, strength and rotation of the brush (or current object), but if the need for a more precise control arises, then the configuration dialog can be used. 
+    </P>
+    <P>
+    Brush Scale<BR>
+    The size of the brush (and also of the current object)<BR>
+
+    Brush Strength (Z)<BR>
+    The strength of the brush or the Z offset (height above/below the terrain) of the current object<BR>
+
+    Heading, Pitch, Roll<BR>
+    Rotation of the brush/object.<BR>
+    </P>
     </DIV>
 </BODY>
