--- a/manual/config_grid.html
+++ b/manual/config_grid.html
@@ -93,12 +93,7 @@
             <LI><LABEL class="collapse" for="_9">Saving and Loading</LABEL>
                 <INPUT id="_9" type="checkbox">
                     <UL>
-                        <LI class="nav"><A href="save_h.html">Height map</A></LI>
-                        <LI class="nav"><A href="save_d.html">Detail maps</A></LI>
-                        <LI class="nav"><A href="save_g.html">Grass map</A></LI>
-                        <LI class="nav"><A href="save_nav.html">Navigation map</A></LI>
-                        <LI class="nav"><A href="save_obj.html">Objects</A></LI>
-                        <LI class="nav"><A href="save_coll.html">Collision mesh</A></LI>                    
+                        <LI class="nav"><A href="save_h.html">Save/Load dialog</A></LI>                    
                     </UL>
             </LI>
         </OL>
@@ -108,8 +103,26 @@
          <A href="config_time.html" class="right">NEXT -&gt;&gt;</A>        
         <H1>Grid configuration</H1>
     </DIV> 
-    <DIV id="main">    
-     <P>
-     </P>
+    <DIV id="main">   
+        <DIV class="img">
+            <IMG src="img/config.png"> 
+        </DIV>        
+    <P>
+    The editor allows to change the grid size (number of grids in the grid) and its position (height). Clicking on the Configuration button will show the dialog with all the configuration options.
+    </P>
+        <DIV class="img">
+            <IMG src="img/screen6_small.png"> 
+        </DIV>
+        <H4>Config dialog</H4>
+    <P>
+    It is important to remember that the textures and the shape of the terrain is always painted/sculpted on a plane positioned exactly as the grid (even if the grid is hidden). The position of the camera is also relative to the grid. 
+    </P>
+    <P>
+    Grid size<BR>
+    The number of rows and columns in the grid.<BR><BR>
+
+    Grid Z<BR>
+    Position (height) of the grid.
+    </P>
     </DIV>
 </BODY>
