--- a/manual/config_h2o.html
+++ b/manual/config_h2o.html
@@ -93,12 +93,7 @@
             <LI><LABEL class="collapse" for="_9">Saving and Loading</LABEL>
                 <INPUT id="_9" type="checkbox">
                     <UL>
-                        <LI class="nav"><A href="save_h.html">Height map</A></LI>
-                        <LI class="nav"><A href="save_d.html">Detail maps</A></LI>
-                        <LI class="nav"><A href="save_g.html">Grass map</A></LI>
-                        <LI class="nav"><A href="save_nav.html">Navigation map</A></LI>
-                        <LI class="nav"><A href="save_obj.html">Objects</A></LI>
-                        <LI class="nav"><A href="save_coll.html">Collision mesh</A></LI>                    
+                        <LI class="nav"><A href="save_h.html">Save/Load dialog</A></LI>                    
                     </UL>
             </LI>
         </OL>
@@ -110,12 +105,16 @@
     </DIV> 
     <DIV id="main">    
         <DIV class="img">
+            <IMG src="img/sky_sea_icon.png"> 
+        </DIV>
+        <H4>Water, Sky and terrain config icon</H4>
+    <P>
+    The editor allows to configure a water plane and a sky dome, these are part of the map configuration because all the water and sky settings are saved with the map file. 
+    </P>    
+        <DIV class="img">
             <IMG src="img/screen7_small.png"> 
         </DIV>
         <H4>Water, Sky and terrain config dialog</H4>
-    <P>
-    The editor allows to configure a water plane and a sky dome, these are part of the map configuration because all the water and sky settings are saved with the map file. 
-    </P>  
     <P>
     <H2>Sky settings</H2>
     <P>
