--- a/manual/config_time.html
+++ b/manual/config_time.html
@@ -93,12 +93,7 @@
             <LI><LABEL class="collapse" for="_9">Saving and Loading</LABEL>
                 <INPUT id="_9" type="checkbox">
                     <UL>
-                        <LI class="nav"><A href="save_h.html">Height map</A></LI>
-                        <LI class="nav"><A href="save_d.html">Detail maps</A></LI>
-                        <LI class="nav"><A href="save_g.html">Grass map</A></LI>
-                        <LI class="nav"><A href="save_nav.html">Navigation map</A></LI>
-                        <LI class="nav"><A href="save_obj.html">Objects</A></LI>
-                        <LI class="nav"><A href="save_coll.html">Collision mesh</A></LI>                    
+                        <LI class="nav"><A href="save_h.html">Save/Load dialog</A></LI>                    
                     </UL>
             </LI>
         </OL>
@@ -108,8 +103,25 @@
          <A href="config_brush.html" class="right">NEXT -&gt;&gt;</A>        
         <H1>Setting the time of day</H1>
     </DIV> 
-    <DIV id="main">    
-     <P>
-     </P>
+    <DIV id="main">  
+        <DIV class="img">
+            <IMG src="img/config.png"> 
+        </DIV>    
+    <P>
+    The editor allows to view the map at any given time of day, from dawn to dusk, at noon or midnight and any time in between.  Setting the time changes the position and color of the sun, sky, clouds and fog.
+    </P>
+    <DIV class="img">
+            <IMG src="img/screen6_small.png"> 
+        </DIV>
+    <P>
+    To set the time you will need to type in a hour (in a 24h format, from 0 to 23) in the configuration dialog. The entry field expects a floating point number, not a time string, so if you want to see the map at 7:30 in the morning type in 7.5.
+    </P>
+    <DIV class="img">
+            <IMG src="img/screen9_small.png"> 
+            <IMG src="img/screen10_small.png"> 
+            <IMG src="img/screen11_small.png"> 
+            <IMG src="img/screen12_small.png"> 
+        </DIV>
+        <H4>Same scen at different time of day</H4>
     </DIV>
 </BODY>
