Better english (thx to rdb)

--- a/manual/h_brush.html
+++ b/manual/h_brush.html
@@ -32,7 +32,7 @@
             <LI><LABEL class="collapse" for="_2">Heightmap paint mode</LABEL>
                 <INPUT id="_2" type="checkbox" checked>                
                     <UL>
-                        <LI class="nav"><A href="h_brush.html">&gt;Controling brushes</A></LI>
+                        <LI class="nav"><A href="h_brush.html">&gt;Controlling brushes</A></LI>
                         <LI class="nav"><A href="h_raise.html">Raise Terrain</A></LI>
                         <LI class="nav"><A href="h_lower.html">Lower Terrain</A></LI>
                         <LI class="nav"><A href="h_level.html">Level Terrain</A></LI>
@@ -41,7 +41,7 @@
             <LI><LABEL class="collapse" for="_3">Texture paint mode</LABEL>
                 <INPUT id="_3" type="checkbox">
                     <UL>
-                        <LI class="nav"><A href="t_brush.html">Controling brushes</A></LI>
+                        <LI class="nav"><A href="t_brush.html">Controlling brushes</A></LI>
                         <LI class="nav"><A href="t_change.html">Changing textures</A></LI>
                         
                         <LI class="nav"><A href="t_custom.html">Custom textures</A></LI>
@@ -50,7 +50,7 @@
             <LI><LABEL class="collapse" for="_4">Grass paint mode</LABEL>
                 <INPUT id="_4" type="checkbox">
                     <UL>
-                        <LI class="nav"><A href="g_brush.html">Controling brushes</A></LI>
+                        <LI class="nav"><A href="g_brush.html">Controlling brushes</A></LI>
                         <LI class="nav"><A href="g_change.html">Changing textures</A></LI>
                         
                         <LI class="nav"><A href="g_custom.html">Custom textures</A></LI>
@@ -139,7 +139,7 @@
             Just as the size, the rotation can be changed in the configuration dialog. The field labeled Heading is responsible for the brush rotation.
         </P>
         <P>
-            The strength of the brush can be controlled with W and S keys. Holding down the W key will increase the rush strength holding down the S key will decrease it. The strength of the brush is actually it’s transparency, where 0.0 is total transparent and 1.0 is opaque. Using the Raise and Lower paint modes the strength controls how fast the feature is applied, using the Level mode it sets the desired level (height). At all times the current strength of the brush is displayed as a numerical value on the second icon in the bottom left corner of the window.
+            The strength of the brush can be controlled with W and S keys. Holding down the W key will increase the brush strength, whereas holding down the S key will decrease it. The strength of the brush is actually its transparency, where 0.0 is totally transparent and 1.0 is opaque. Using the Raise and Lower paint modes the strength controls how fast the feature is applied, using the Level mode it sets the desired level (height). At all times the current strength of the brush is displayed as a numerical value on the second icon in the bottom left corner of the window.
         </P>
         <P>
             Like other brush setting it can also be set using the configuration dialog. 
