--- a/manual/h_level.html
+++ b/manual/h_level.html
@@ -32,7 +32,7 @@
             <LI><LABEL class="collapse" for="_2">Heightmap paint mode</LABEL>
                 <INPUT id="_2" type="checkbox" checked>                
                     <UL>
-                        <LI class="nav"><A href="h_brush.html">Controling brushes</A></LI>
+                        <LI class="nav"><A href="h_brush.html">Controlling brushes</A></LI>
                         <LI class="nav"><A href="h_raise.html">Raise Terrain</A></LI>
                         <LI class="nav"><A href="h_lower.html">Lower Terrain</A></LI>
                         <LI class="nav"><A href="h_level.html">&gt;Level Terrain</A></LI>
@@ -41,7 +41,7 @@
             <LI><LABEL class="collapse" for="_3">Texture paint mode</LABEL>
                 <INPUT id="_3" type="checkbox">
                     <UL>
-                        <LI class="nav"><A href="t_brush.html">Controling brushes</A></LI>
+                        <LI class="nav"><A href="t_brush.html">Controlling brushes</A></LI>
                         <LI class="nav"><A href="t_change.html">Changing textures</A></LI>
                         
                         <LI class="nav"><A href="t_custom.html">Custom textures</A></LI>
@@ -50,7 +50,7 @@
             <LI><LABEL class="collapse" for="_4">Grass paint mode</LABEL>
                 <INPUT id="_4" type="checkbox">
                     <UL>
-                        <LI class="nav"><A href="g_brush.html">Controling brushes</A></LI>
+                        <LI class="nav"><A href="g_brush.html">Controlling brushes</A></LI>
                         <LI class="nav"><A href="g_change.html">Changing textures</A></LI>
                         
                         <LI class="nav"><A href="g_custom.html">Custom textures</A></LI>
