--- a/manual/overview.html
+++ b/manual/overview.html
@@ -32,7 +32,7 @@
             <LI><LABEL class="collapse" for="_2">Heightmap paint mode</LABEL>
                 <INPUT id="_2" type="checkbox">                
                     <UL>
-                        <LI class="nav"><A href="h_brush.html">Controling brushes</A></LI>
+                        <LI class="nav"><A href="h_brush.html">Controlling brushes</A></LI>
                         <LI class="nav"><A href="h_raise.html">Raise Terrain</A></LI>
                         <LI class="nav"><A href="h_lower.html">Lower Terrain</A></LI>
                         <LI class="nav"><A href="h_level.html">Level Terrain</A></LI>
@@ -41,7 +41,7 @@
             <LI><LABEL class="collapse" for="_3">Texture paint mode</LABEL>
                 <INPUT id="_3" type="checkbox">
                     <UL>
-                        <LI class="nav"><A href="t_brush.html">Controling brushes</A></LI>
+                        <LI class="nav"><A href="t_brush.html">Controlling brushes</A></LI>
                         <LI class="nav"><A href="t_change.html">Changing textures</A></LI>
                         
                         <LI class="nav"><A href="t_custom.html">Custom textures</A></LI>
@@ -50,7 +50,7 @@
             <LI><LABEL class="collapse" for="_4">Grass paint mode</LABEL>
                 <INPUT id="_4" type="checkbox">
                     <UL>
-                        <LI class="nav"><A href="g_brush.html">Controling brushes</A></LI>
+                        <LI class="nav"><A href="g_brush.html">Controlling brushes</A></LI>
                         <LI class="nav"><A href="g_change.html">Changing textures</A></LI>
                         
                         <LI class="nav"><A href="g_custom.html">Custom textures</A></LI>
@@ -110,7 +110,7 @@
         <IMG src="img/screen0_small.png"> 
         <H4>Screen showing basic UI elements</H4>
     </DIV>
-    The user interface consists of a few basic elements. The working area taking up most of the window is a 3D view of the map. The 3D cursor is a black vertical line with two red and blue triangles at one end that shows a point on the map that will be edited or a spot on it where objects will be placed. There are several panels with buttons and some with input fields. From time to time the editor may also show a dialog window with both input fields and buttons. Hovering the cursor over any gui element will always display a tooltip telling you what function the button holds and what keys are associated with that function. 
+    The user interface consists of a few basic elements. The working area taking up most of the window is a 3D view of the map. The 3D cursor is a black vertical line with two red and blue triangles at one end that shows a point on the map that will be edited or a spot on it where objects will be placed. There are several panels with buttons and some with input fields. From time to time the editor may also show a dialog window with both input fields and buttons. Hovering the cursor over any GUI element will always display a tooltip telling you what function the button holds and what keys are associated with that function. 
     </P>
     <P>
     <H2>Camera control</H2>
