--- a/manual/requirements.html
+++ b/manual/requirements.html
@@ -32,7 +32,7 @@
             <LI><LABEL class="collapse" for="_2">Heightmap paint mode</LABEL>
                 <INPUT id="_2" type="checkbox">                
                     <UL>
-                        <LI class="nav"><A href="h_brush.html">Controling brushes</A></LI>
+                        <LI class="nav"><A href="h_brush.html">Controlling brushes</A></LI>
                         <LI class="nav"><A href="h_raise.html">Raise Terrain</A></LI>
                         <LI class="nav"><A href="h_lower.html">Lower Terrain</A></LI>
                         <LI class="nav"><A href="h_level.html">Level Terrain</A></LI>
@@ -41,7 +41,7 @@
             <LI><LABEL class="collapse" for="_3">Texture paint mode</LABEL>
                 <INPUT id="_3" type="checkbox">
                     <UL>
-                        <LI class="nav"><A href="t_brush.html">Controling brushes</A></LI>
+                        <LI class="nav"><A href="t_brush.html">Controlling brushes</A></LI>
                         <LI class="nav"><A href="t_change.html">Changing textures</A></LI>
                         
                         <LI class="nav"><A href="t_custom.html">Custom textures</A></LI>
@@ -50,7 +50,7 @@
             <LI><LABEL class="collapse" for="_4">Grass paint mode</LABEL>
                 <INPUT id="_4" type="checkbox">
                     <UL>
-                        <LI class="nav"><A href="g_brush.html">Controling brushes</A></LI>
+                        <LI class="nav"><A href="g_brush.html">Controlling brushes</A></LI>
                         <LI class="nav"><A href="g_change.html">Changing textures</A></LI>
                         
                         <LI class="nav"><A href="g_custom.html">Custom textures</A></LI>
@@ -118,7 +118,7 @@
     To use all the features of the editor a GPU (and driver) supporting OpenGL 3.1 is recommended. The program should also run on older versions as long as the GPU/driver supports either GL_ARB_draw_instanced  or GL_EXT_draw_instanced extensions. These extensions are used to render grass so disabling grass allows to run the editor on OpenGL 2.1 compatible hardware. 
     </P>
     <P>
-    The editor has been developed and run (at about 30fps) on a machine with the fallowing hardware:
+    The editor has been developed and runs (at about 30fps) on a machine with the fallowing hardware:
     <UL>
     <LI>CPU: Intel Core2  6300  @ 1.86GHz</LI>
     <LI>RAM: 2GB</LI>
