--- a/manual/index.html
+++ b/manual/index.html
@@ -32,7 +32,7 @@
             <LI><LABEL class="collapse" for="_2">Heightmap paint mode</LABEL>
                 <INPUT id="_2" type="checkbox">                
                     <UL>
-                        <LI class="nav"><A href="h_brush.html">Controling brushes</A></LI>
+                        <LI class="nav"><A href="h_brush.html">Controlling brushes</A></LI>
                         <LI class="nav"><A href="h_raise.html">Raise Terrain</A></LI>
                         <LI class="nav"><A href="h_lower.html">Lower Terrain</A></LI>
                         <LI class="nav"><A href="h_level.html">Level Terrain</A></LI>
@@ -41,7 +41,7 @@
             <LI><LABEL class="collapse" for="_3">Texture paint mode</LABEL>
                 <INPUT id="_3" type="checkbox">
                     <UL>
-                        <LI class="nav"><A href="t_brush.html">Controling brushes</A></LI>
+                        <LI class="nav"><A href="t_brush.html">Controlling brushes</A></LI>
                         <LI class="nav"><A href="t_change.html">Changing textures</A></LI>
                         
                         <LI class="nav"><A href="t_custom.html">Custom textures</A></LI>
@@ -50,7 +50,7 @@
             <LI><LABEL class="collapse" for="_4">Grass paint mode</LABEL>
                 <INPUT id="_4" type="checkbox">
                     <UL>
-                        <LI class="nav"><A href="g_brush.html">Controling brushes</A></LI>
+                        <LI class="nav"><A href="g_brush.html">Controlling brushes</A></LI>
                         <LI class="nav"><A href="g_change.html">Changing textures</A></LI>
                         
                         <LI class="nav"><A href="g_custom.html">Custom textures</A></LI>
@@ -110,7 +110,7 @@
         It was initially designed as a heightmap editor, but in time it grew to be something more - a tool allowing anyone to create a complete environment (level/map/area -call it what you will), with shaders to render animated grass and foliage, a dynamic sky dome, lights, shadows, Water and Sky and particle effects.   
         </P>
         <P>
-        Just like Panda3D, Koparka is a free tool, with sourcecode available at github with a very liberal license (The Beer-Ware License). 
+        Just like Panda3D, Koparka is a free tool, with source code available at github with a very liberal license (The Beer-Ware License). 
         </P>
         <DIV class="img">
             <IMG src="img/screen20_small.png"> 
