Manual update (+bugfix)

--- a/manual/config_time.html
+++ b/manual/config_time.html
@@ -108,7 +108,7 @@
             <IMG src="img/config.png"> 
         </DIV>    
     <P>
-    The editor allows to view the map at any given time of day, from dawn to dusk, at noon or midnight and any time in between.  Setting the time changes the position and color of the sun, sky, clouds and fog.
+    The editor allows to view the map at any given time of day, from dawn to dusk, at noon or midnight and any time in between.  Setting the time changes the position and color of the sun, sky, clouds and fog. The density of the fog can also be controlled independently, this setting only affects what is seen in the editor and is not saved in the map files.
     </P>
     <DIV class="img">
             <IMG src="img/screen6_small.png"> 
