--- a/manual/g_brush.html
+++ b/manual/g_brush.html
@@ -117,6 +117,10 @@
     <P>
     You can remove grass by clicking on the big red X - this changes the brush to a eraser, you can now remove patches of grass in the same way you would paint them – hold down the left mouse button and move the cursor.
     </P>
+    <DIV class="img">
+            <IMG src="img/screen14_small.png"> 
+        </DIV>
+        <H4>Blended grass textures</H4>
     <P>
     The position of the brush is controlled with the mouse and displayed as a vertical line with two triangle arrows (blue and red) at one end (called the 3D cursor). The brush is automatically moved to where the mouse cursor points, but not to a point on the terrain mesh but on the grid plane.
     </P>
@@ -138,9 +142,11 @@
     <P>
     The strength of the brush can be controlled with W and S keys. Holding down the W key will increase the brush strength holding down the S key will decrease it. The strength of the brush is most important when you want to mix two or more grass textures. 
     </P>
-    <DIV class="img">
-            <IMG src="img/screen14_small.png"> 
+    <P>In recent versions of the editor you can also change the size, strength and rotation of a brush by clicking the appropriate icon and adjusting a pop-up slider.</P>        
+        <DIV class="img">
+            <IMG src="img/slider.png">             
+            <H4>A pop-up slider</H4>
         </DIV>
-        <H4>Blended grass textures</H4>
+    
     </DIV>
 </BODY>
