--- a/manual/overview.html
+++ b/manual/overview.html
@@ -133,6 +133,9 @@
     You can rotate the brush using Q(left) and E (right) keys.
     </P>
     <P>
+    In recent versions of the editor you can also change the size, strength and rotation of a brush by clicking the appropriate icon and adjusting a pop-up slider.
+    </P>
+    <P>
     In modes that use the brush for painting, the shape of the brush can be selected by clicking on one of the icons in the top row. The currently selected brush is highlighted green. 
     </P>
     <P>
