--- a/manual/t_brush.html
+++ b/manual/t_brush.html
@@ -114,6 +114,10 @@
     <P>
     To paint a portion of the terrain just hold down the left mouse button. Painting is done in a airbrush fashion – you hold down the left mouse button and move the pointer around, the strength of the brush controls how much of the current texture is spayed onto the terrain. 
     </P>
+    <DIV class="img">
+            <IMG src="img/screen22_small.png"> 
+        </DIV>
+    <H4>Blended textures</H4>    
     <P>
     The position of the brush is controlled with the mouse and displayed as a vertical line with two triangle arrows (blue and red) at one end (called the 3D cursor). The brush is automatically moved to where the mouse cursor points, but not to a point on the terrain mesh but on the grid plane.
     </P>
@@ -135,9 +139,10 @@
     <P>    
     The strength of the brush can be controlled with W and S keys. Holding down the W key will increase the brush strength holding down the S key will decrease it. The strength of the brush is actually it’s transparency, where 0.0 is total transparent and 1.0 is opaque. This feature allows to paint blends between the 6 base textures – for example if some of the textures represent rock, sand and grass, then you can paint a portion of the terrain that shares these 3 textures even all 6 textures if that’s what you want. 
     </P>
-   <DIV class="img">
-            <IMG src="img/screen22_small.png"> 
+    <P>In recent versions of the editor you can also change the size, strength and rotation of a brush by clicking the appropriate icon and adjusting a pop-up slider.</P>        
+        <DIV class="img">
+            <IMG src="img/slider.png">             
+            <H4>A pop-up slider</H4>
         </DIV>
-    <H4>Blended textures</H4>
-    </DIV>
+   </DIV>
 </BODY>
